--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "snapshot": "fedx-scripts jest --updateSnapshot",
     "start": "fedx-scripts webpack-dev-server --progress",
     "test": "fedx-scripts jest --coverage",
-    "addXblock": "node addXblock"
+    "addXblock": "node addXblock",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "files": [
     "/dist"
@@ -34,12 +36,22 @@
   },
   "homepage": "https://github.com/edx/frontend-lib-content-components#readme",
   "devDependencies": {
+    "@babel/core": "^7.20.12",
     "@edx/frontend-build": "^11.0.2",
     "@edx/frontend-platform": "2.4.0",
     "@edx/paragon": "^20.27.0",
+    "@storybook/addon-actions": "^6.5.15",
+    "@storybook/addon-essentials": "^6.5.15",
+    "@storybook/addon-interactions": "^6.5.15",
+    "@storybook/addon-links": "^6.5.15",
+    "@storybook/builder-webpack5": "^6.5.15",
+    "@storybook/manager-webpack5": "^6.5.15",
+    "@storybook/react": "^6.5.15",
+    "@storybook/testing-library": "^0.0.13",
     "@testing-library/dom": "^8.13.0",
     "@testing-library/react": "12.1.1",
     "@testing-library/user-event": "^13.5.0",
+    "babel-loader": "^8.3.0",
     "codecov": "3.8.3",
     "enzyme": "3.11.0",
     "enzyme-adapter-react-16": "1.15.6",
@@ -62,10 +74,12 @@
     "@codemirror/state": "^6.0.0",
     "@codemirror/view": "^6.0.0",
     "@reduxjs/toolkit": "^1.8.1",
+    "@storybook/preset-scss": "^1.0.3",
     "@tinymce/tinymce-react": "^3.14.0",
     "babel-polyfill": "6.26.0",
     "canvas": "^2.10.1",
     "codemirror": "^6.0.0",
+    "css-loader": "^6.7.3",
     "fast-xml-parser": "^4.0.10",
     "lodash-es": "^4.17.21",
     "react-redux": "^7.2.8",
@@ -77,6 +91,9 @@
     "redux-mock-store": "^1.5.4",
     "redux-thunk": "^2.4.1",
     "reselect": "^4.1.5",
+    "sass": "^1.57.1",
+    "sass-loader": "^13.2.0",
+    "style-loader": "^3.3.1",
     "tinymce": "^5.10.4",
     "video-react": "^0.15.0",
     "video.js": "^7.18.1"
