--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "start": "fedx-scripts webpack-dev-server --progress",
     "test": "fedx-scripts jest --coverage",
     "addXblock": "node addXblock",
-    "storybook": "NODE_ENV='development' NODE_PATH=./src REACT_APP_DEVGALLERY='true' start-storybook -p 6006",
+    "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook"
   },
   "files": [
@@ -36,8 +36,9 @@
   },
   "homepage": "https://github.com/edx/frontend-lib-content-components#readme",
   "devDependencies": {
-    "@edx/brand": "npm:@edx/brand-edx.org@^2.0.3",
     "@babel/core": "^7.20.12",
+    "@edx/brand": "npm:@edx/brand-edx.org@^2.0.3",
+    "@edx/browserslist-config": "1.0.0",
     "@edx/frontend-build": "^11.0.2",
     "@edx/frontend-platform": "2.4.0",
     "@edx/paragon": "^20.27.0",
@@ -47,6 +48,8 @@
     "@storybook/addon-links": "^6.5.15",
     "@storybook/builder-webpack5": "^6.5.15",
     "@storybook/manager-webpack5": "^6.5.15",
+    "@storybook/builder-webpack4": "^6.5.15",
+    "@storybook/manager-webpack4": "^6.5.15",
     "@storybook/react": "^6.5.15",
     "@storybook/testing-library": "^0.0.13",
     "@testing-library/dom": "^8.13.0",
@@ -54,12 +57,17 @@
     "@testing-library/user-event": "^13.5.0",
     "babel-loader": "^8.3.0",
     "codecov": "3.8.3",
+    "css-loader": "^6.7.3",
     "enzyme": "3.11.0",
     "enzyme-adapter-react-16": "1.15.6",
     "enzyme-to-json": "^3.6.2",
     "eslint-import-resolver-alias": "^1.1.2",
     "eslint-plugin-import": "^2.26.0",
     "husky": "7.0.4",
+    "postcss": "^8.4.21",
+    "postcss-import": "^15.1.0",
+    "postcss-loader": "^7.0.2",
+    "postcss-url": "^10.1.3",
     "prop-types": "15.7.2",
     "react": "16.14.0",
     "react-dom": "16.14.0",
@@ -80,7 +88,6 @@
     "babel-polyfill": "6.26.0",
     "canvas": "^2.10.1",
     "codemirror": "^6.0.0",
-    "css-loader": "^6.7.3",
     "fast-xml-parser": "^4.0.10",
     "lodash-es": "^4.17.21",
     "react-redux": "^7.2.8",
@@ -105,5 +112,19 @@
     "prop-types": "^15.5.10",
     "react": "^16.14.0",
     "react-dom": "^16.14.0"
+  },
+  "overrides": {
+    "@storybook/builder-webpack5": {
+      "css-loader": "$css-loader"
+    },
+    "@storybook/manager-webpack5": {
+      "css-loader": "$css-loader"
+    },
+    "@storybook/builder-webpack4": {
+      "css-loader": "$css-loader"
+    },
+    "@storybook/manager-webpack4": {
+      "css-loader": "$css-loader"
+    }
   }
 }
