--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@edx/frontend-platform": "2.4.0",
     "@edx/paragon": "^20.28.0",
     "@testing-library/dom": "^8.13.0",
+    "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^12.1.1",
     "@testing-library/user-event": "^13.5.0",
     "codecov": "3.8.3",
@@ -47,6 +48,7 @@
     "eslint-import-resolver-alias": "^1.1.2",
     "eslint-plugin-import": "^2.26.0",
     "husky": "7.0.4",
+    "jest-dom": "^4.0.0",
     "prop-types": "15.7.2",
     "react": "16.14.0",
     "react-dom": "16.14.0",
